Test Module, Few Extra Mappings, and updated Readme.md